--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
