--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
