--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/styles": "^4.11.4",
     "@types/react-router-dom": "^5.1.7",
     "jsxstyle": "^2.4.0",
     "react": "^17.0.0",
