--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MangoVerde",
+  "name": "www.mangoverde.site",
   "version": "0.0.0",
   "homepage": "www.mangoverde.site",
   "scripts": {
