--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsxstyle": "^2.4.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "styled-jsx": "^3.4.4"
   },
