--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/styles": "^4.11.4",
     "@types/react-router-dom": "^5.1.7",
+    "animate.css-react": "^1.1.0",
+    "animated": "^0.2.2",
     "jsxstyle": "^2.4.0",
     "react": "^17.0.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.0",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
@@ -19,7 +22,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.8",
     "typescript": "^4.1.2",
     "vite": "^1.0.0-rc.13",
     "vite-plugin-react": "^4.0.0"
